<resources>
    <string name="app_name">Chatter</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_register">Register</string>
    <string name="text_go_to_login">Already have an account? Click here to login.</string>
    <string name="text_login">Login</string>
    <string name="text_back_to_reg">Back to registration</string>
    <string name="hint_select_photo">Select Photo</string>
    <string name="text_new_message">New Message</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="title_select_user">Select User</string>
    <string name="title_chat_log">Chat Log</string>
    <string name="hint_enter_message">Enter Message</string>
    <string name="message_send">Send</string>
</resources>
