<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity" android:background="@android:color/holo_red_light">

    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_edittext_login" android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/hint_email"
            android:background="@color/editTextColor" android:paddingLeft="16dp" android:paddingRight="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_edittext_login"
            app:layout_constraintStart_toStartOf="@+id/email_edittext_login"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/email_edittext_login"
            app:layout_constraintEnd_toEndOf="@+id/email_edittext_login" android:hint="@string/hint_password"
            android:background="@color/editTextColor" android:paddingLeft="16dp" android:paddingRight="16dp"/>
    <Button
            android:text="@string/text_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_button_login" app:layout_constraintEnd_toEndOf="@+id/password_edittext_login"
            app:layout_constraintStart_toStartOf="@+id/password_edittext_login" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/password_edittext_login"/>
    <TextView
            android:text="@string/text_back_to_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/backtoreg_textview_login" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/login_button_login"
            app:layout_constraintEnd_toEndOf="@+id/login_button_login"
            app:layout_constraintStart_toStartOf="@+id/login_button_login" android:textAlignment="center"
    />
</android.support.constraint.ConstraintLayout>