<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity" android:background="@android:color/holo_red_light">
    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username_edittext_register"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/editTextColor"
            android:hint="@string/hint_username"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:ems="10"
            android:id="@+id/email_editText_register"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintTop_toBottomOf="@+id/username_edittext_register"
            android:background="@color/editTextColor"
            android:hint="@string/hint_email"
            android:inputType="textWebEmailAddress" android:autofillHints="no" tools:targetApi="o"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:ems="10"
            android:id="@+id/password_edittext_register"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintTop_toBottomOf="@+id/email_editText_register"
            android:background="@color/editTextColor"
            android:hint="@string/hint_password"
            android:inputType="textPassword|numberPassword|textWebPassword" android:importantForAutofill="no"
            tools:targetApi="o"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/register_button_register"
            app:layout_constraintEnd_toEndOf="@+id/password_edittext_register"
            app:layout_constraintStart_toStartOf="@+id/password_edittext_register"
            app:layout_constraintHorizontal_bias="0.0" android:text="@string/hint_register"
            android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/password_edittext_register"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_textview_register" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/register_button_register"
            app:layout_constraintStart_toStartOf="@+id/register_button_register"
            app:layout_constraintEnd_toEndOf="@+id/register_button_register" android:text="@string/text_go_to_login"/>
</android.support.constraint.ConstraintLayout>